--- a/src/main/resources/templates/ticket-all.html
+++ b/src/main/resources/templates/ticket-all.html
@@ -1,18 +1,7 @@
 <!DOCTYPE HTML>
 <html class="h-100" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Tickets</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-</head>
 
-
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-    <symbol id="check" viewBox="0 0 16 16">
-        <title>Check</title>
-        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
-    </symbol>
-</svg>
+<head th:insert="blocks/head :: head"></head>
 
 <div class="container py-3">
 
@@ -21,7 +10,46 @@
     <body>
 
     <h2>Tickets</h2>
-    <a class="pt-30" href="/ticket-add">Create new</a>
+
+    <form th:method="GET" th:action="@{/ticket-all}">
+
+        <br>
+        <div class="form-group row">
+            <div class="col-sm-1">
+                <a class="btn btn-primary" href="/ticket-add" role="button">Add&nbspnew</a>
+            </div>
+
+            <label class="col-sm-1 col-form-label" for="after">From&nbspdate:</label>
+            <div class="col-sm-1"><input class="form-control" type="date" name="after" id="after"></div>
+
+            <label class="col-sm-1 col-form-label" for="before">Before&nbspdate:</label>
+            <div class="col-sm-1"><input class="form-control" type="date" name="before" id="before"></div>
+
+            <label class="col-sm-1 col-form-label" for="find">Find&nbsptext:</label>
+            <div class="col-sm-1"><input class="form-control" type="text" name="find" id="find"></div>
+
+            <label class="col-sm-1 col-form-label" for="sorting">Sorting:</label>
+            <div class="col-sm-1">
+                <select class="form-select" name="sorting" id="sorting">
+                    <option value="">-</option>
+                    <option value="id">Id</option>
+                    <option value="date">Date</option>
+                </select>
+            </div>
+
+            <div class="col-sm-1">
+                <input class="btn btn-outline-secondary" type="submit" value="Apply"/>
+            </div>
+
+            <div class="col-sm-1">
+                <a class="btn btn-outline-secondary" href="/ticket-all" role="button">Default</a>
+            </div>
+
+        </div>
+
+    </form>
+    <br>
+
 
     <div class="table-responsive">
         <table class="table table-striped table-sm">
@@ -35,15 +63,16 @@
             </tr>
             </thead>
             <tbody>
-                <div th:each="ticket : ${tickets}">
-                    <tr>
-                        <td th:text="${ticket.getId()}"></td>
-                        <td><a th:href="@{/ticket-all/{id}(id=${ticket.getId()})}" th:text="${ticket.getName()}">user</a></td>
-                        <td th:text="${ticket.getDate()}"></td>
-                        <td th:text="${ticket.getCompleted()}"></td>
-                        <td th:text="${ticket.getCustomerById(ticket.getCustomerId())}"></td>
-                    </tr>
-                </div>
+            <div th:each="ticket : ${tickets}">
+                <tr>
+                    <td th:text="${ticket[0]}"></td>
+                    <td><a th:href="@{/ticket-all/{id}(id=${ticket[0]})}"
+                           th:text="${ticket[1]}">user</a></td>
+                    <td th:text="${ticket[2]}"></td>
+                    <td th:text="${ticket[3]}"></td>
+                    <td th:text="${ticket[4]}"></td>
+                </tr>
+            </div>
             </tbody>
         </table>
     </div>
