--- a/src/main/resources/templates/ticket.html
+++ b/src/main/resources/templates/ticket.html
@@ -1,18 +1,7 @@
 <!DOCTYPE HTML>
 <html class="h-100" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Ticket</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css">
-</head>
 
-
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-    <symbol id="check" viewBox="0 0 16 16">
-        <title>Check</title>
-        <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"></path>
-    </symbol>
-</svg>
+<head th:insert="blocks/head :: head"></head>
 
 <div class="container py-3">
 
@@ -30,19 +19,19 @@
                 <label class="form-check-label" for="completed">Completed</label>
                 <input class="form-check-input" type="checkbox" th:field="*{completed}" id="completed">
             </div><br>
-            <label for="customerId" class="form-label">Customer</label>
+            <label for="customerId">Customer</label>
             <select class="form-select" th:field="*{customerId}" name="customerId" id="customerId">
                 <option th:value="0" th:text="Select"></option>
                 <option th:each="customer : ${customers}" th:value="${customer.getId()}" th:text="${customer.getName()}"></option>
             </select><br>
-            <label class="form-label" for="name">Name:</label>
+            <label for="name">Name:</label>
             <input class="form-control" type="text" th:field="*{name}" name="name" placeholder="Vasya" id="name"><br>
-            <label class="form-label" for="date">Date:</label>
-            <input class="form-control" type="text" th:field="*{date}" name="date" placeholder="31.01.2077" id="date"><br>
+            <label for="date">Date:</label>
+            <input class="form-control" type="date" th:field="*{date}" name="date" placeholder="31.01.2077" id="date"><br>
             <input class="btn btn-primary" type="submit" value="Save"/>
         </form>
 
-        <form class="mt-2" th:method="POST" th:action=" @{/ticket-all/{id}/remove (id=${id}) } " th:object="${ticket}">
+        <form class="mt-2" th:method="POST" th:action=" @{/ticket-all/{id}/remove (id=${id}) } ">
             <input class="btn btn-outline-secondary" type="submit" value="Remove"/>
         </form>
 
@@ -56,8 +45,9 @@
     <form th:method="POST" th:action=" @{/ticket-all/{id}/addcomment (id=${id}) } " >
         <div class="col-lg-5">
             <input class="form-control" type="text" name="name" placeholder="Name"><br>
+            <textarea class="form-control" type="text" name="text" placeholder="text"></textarea><br>
         </div>
-        <textarea class="form-control" type="text" name="text" placeholder="text"></textarea><br>
+
         <input class="btn btn-outline-secondary" type="submit" value="Add comment"/>
     </form>
     <br>
